kubernetes-manifests/infra/prometheus/prometheus.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: infra
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prom.lab.donat.im
spec:
  type: LoadBalancer
  selector:
    name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
