kubernetes-manifests/infra/prometheus/prometheus.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: infra
spec:
  ingressClassName: traefik
  rules:
    - host: prom.lab.donat.im
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
